--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,113 @@
+/* Общий стиль для приложения */
+html, body {
+  margin: 0;
+  padding: 0;
+  height: 100%; /* Устанавливаем высоту страницы на 100% */
+}
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  min-height: 100vh; /* Минимальная высота контейнера приложения */
   display: flex;
   flex-direction: column;
+}
+
+
+.logo img {
+  height: 100px;
+  width: auto;
+}
+
+
+/* Основное содержимое - центрируем по вертикали */
+.main-content {
+  flex: 1; /* Заставляет основной блок занимать все доступное пространство */
+  display: flex;
+  flex-direction: column;
+  justify-content: center; /* Центрирование по вертикали */
+  align-items: center; /* Центрирование по горизонтали */
+  padding: 2rem;
+  background-color: #f9f9f9;
+  margin: 0;
+}
+
+/* Стили для навигационной панели */
+.navbar {
+  display: flex;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding: 1rem 2rem;
+  background-color: white;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
-.App-link {
-  color: #61dafb;
+/* Логотип */
+.navbar .logo {
+  font-size: 1.8rem;
+  font-weight: bold;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* Стили для списка навигации */
+.navbar ul {
+  display: flex;
+  list-style: none;
+  gap: 20px;
+}
+
+.navbar a {
+  text-decoration: none;
+  color: black;
+  font-weight: bold;
+  font-size: 1.1rem;
+}
+
+/* Кнопка прохождения теста */
+.scoring-test-btn {
+  background-color: #ffdd57;
+  color: #000;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 20px;
+  font-size: 1.1rem;
+  cursor: pointer;
+}
+
+
+
+/* Заголовок */
+.main-content h1 {
+  font-size: 3rem;
+  margin-bottom: 1rem;
+}
+
+/* Описание */
+.main-content p {
+  font-size: 1.2rem;
+  margin-bottom: 1.5rem;
+}
+
+/* Карта мира */
+/* .world-map {
+  position: relative;
+  height: 500px;
+  background-image: url('./images/tree-736885_640.png');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  margin-top: 2rem;
+} */
+
+/* Стили для изображений людей */
+.person {
+  position: absolute;
+  width: 80px;
+  height: 80px;
+}
+
+.person img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 50%;
+  border: 3px solid white;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
 }
