--- a/src/styles/CalculatorPage.css
+++ b/src/styles/CalculatorPage.css
@@ -4,6 +4,7 @@
   border-radius: 10px;
   color: rgb(0, 0, 0);
   max-width: fit-content;
+  max-width: 980px;
   margin: 0 auto;
 }
 
@@ -11,6 +12,51 @@ h1 {
   font-size: 2rem;
   margin-bottom: 1rem;
   color: white;
+}
+
+h1.budget-analysis-title {
+  color: black;
+}
+
+th {
+  text-align: justify;
+  border-color: black;
+  border-width: thin;
+  padding: 10px;
+}
+
+td {
+  border-color: black;
+  border-width: thin;
+  padding: 10px;
+}
+
+table.salary-table {
+  margin-top: 15px;
+}
+
+thead {
+  border-color: black;
+  border-width: thin;
+}
+
+h2.block-title {
+  margin-top: 20px;
+}
+
+h3, h2 {
+  font-weight: 700;
+  margin-bottom: 10px;
+}
+
+p.block-description {
+  font-weight: 900;
+}
+
+.block-content {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 15px;
 }
 
 .tabs {
@@ -33,11 +79,16 @@ h1 {
   border-radius: 10px;
 }
 
-.partner, .credit-amount, .term-selection, .payment-info {
+.partner,
+.credit-amount,
+.term-selection,
+.payment-info {
   margin-bottom: 1rem;
 }
 
-.partner label, .credit-amount label, .term-selection label {
+.partner label,
+.credit-amount label,
+.term-selection label {
   display: block;
   margin-bottom: 0.5rem;
   color: #ccc;
@@ -50,7 +101,8 @@ h1 {
   color: #fff;
   border: 1px solid #555;
   border-radius: 5px;
-  appearance: none; /* Убираем стандартную стрелку */
+  appearance: none;
+  /* Убираем стандартную стрелку */
   cursor: pointer;
   font-size: 1rem;
 }
@@ -72,7 +124,8 @@ h1 {
   top: 70%;
   right: 1rem;
   transform: translateY(-50%);
-  pointer-events: none; /* Стрелка не будет мешать клику на select */
+  pointer-events: none;
+  /* Стрелка не будет мешать клику на select */
 }
 
 
@@ -242,4 +295,152 @@ h1 {
 
 .tab-content {
   margin-top: 20px;
+}
+
+/* Стили тестирования */
+.test-container {
+  position: relative;
+  max-width: 950px;
+  margin: 0 auto;
+  text-align: left;
+}
+
+.test-card {
+  background-color: #fff;
+  border: 3px solid #ddd;
+  border-radius: 16px;
+  padding: 20px;
+  box-sizing: border-box;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+}
+
+.question {
+  margin: 20px 0;
+}
+
+.question-image {
+  width: 100%;
+  max-width: 400px;
+  margin: 10px 0;
+  border-radius: 8px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+}
+
+.answers {
+  margin-top: 20px;
+}
+
+.option {
+  margin-bottom: 10px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.next-button {
+  display: block;
+  margin: 20px auto 0px;
+  padding: 10px 20px;
+  border: none;
+  color: #fff;
+  font-weight: bold;
+  border-radius: 8px;
+  cursor: pointer;
+}
+
+/* Результаты */
+.results-card {
+  background-color: #f9f9f9;
+  padding: 20px;
+  border-radius: 16px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+}
+
+.result-block {
+  margin-bottom: 20px;
+}
+
+.restart-button {
+  display: block;
+  margin: 30px auto 0;
+  background-color: #86429A;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  font-size: 1rem;
+  font-weight: bold;
+  border-radius: 8px;
+  cursor: pointer;
+}
+
+.restart-button:hover {
+  background-color: #6b3a8e;
+}
+
+/* Финансы */
+.finance-tab-content {
+  font-size: 1rem;
+}
+
+.financial-form {
+  display: flex;
+  /* flex-wrap: wrap; */
+  flex-direction: column;
+  gap: 10px;
+  margin-bottom: 20px;
+}
+
+.financial-form select {
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  min-width: 200px;
+}
+
+.financial-aid {
+  margin-bottom: 20px;
+}
+
+.financial-aid p {
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.radio-group {
+  display: flex;
+  gap: 20px;
+}
+
+.career-calculator {
+  margin-bottom: 20px;
+}
+
+.career-form {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  flex-wrap: wrap;
+}
+
+.career-form select {
+  min-width: 200px;
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.generate-button {
+  background: #4a90e2;
+  color: #fff;
+  border: none;
+  padding: 12px 24px;
+  cursor: pointer;
+  border-radius: 4px;
+  font-size: 1rem;
+  font-weight: bold;
+}
+
+.generate-button:hover {
+  background: #357ab8;
 }
